[gd_scene load_steps=46 format=3 uid="uid://dfipd6t0uiicv"]

[ext_resource type="Script" uid="uid://c72hkr6kj7ckv" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="Texture2D" uid="uid://djg1bdqheb5a0" path="res://player/Running sprite - Protagonist.png" id="2_8t03j"]
[ext_resource type="Texture2D" uid="uid://5oq5trd7e82l" path="res://player/Protagonist jumping.png" id="2_kb6p2"]
[ext_resource type="PackedScene" uid="uid://ckephimkda3cb" path="res://components/gravity.tscn" id="2_rkbax"]
[ext_resource type="Texture2D" uid="uid://b1xcd5h2sbbav" path="res://player/protagonist idleFixed.png" id="2_yllr7"]
[ext_resource type="Script" uid="uid://boa261lp5dvrj" path="res://player/player_sprite.gd" id="3_2ieo8"]
[ext_resource type="PackedScene" uid="uid://dlg10nup8rkuo" path="res://components/state_machine.tscn" id="3_g1dw6"]
[ext_resource type="PackedScene" uid="uid://0e2015teptyf" path="res://components/movement.tscn" id="3_yw30f"]
[ext_resource type="Texture2D" uid="uid://cd0rt5akoqa8o" path="res://player/Protagonist swinging.png" id="4_wodsf"]
[ext_resource type="PackedScene" uid="uid://cy537276fk4lt" path="res://components/whip.tscn" id="5_g6k8r"]
[ext_resource type="Script" uid="uid://b44ffe4rhpsj" path="res://player/climbing_timeout.gd" id="5_qjkh3"]
[ext_resource type="PackedScene" uid="uid://dqeh25s827j77" path="res://components/cursor.tscn" id="7_rgyib"]
[ext_resource type="Script" uid="uid://dp4yiid8benh1" path="res://player/front_ray_cast.gd" id="8_8t03j"]
[ext_resource type="PackedScene" uid="uid://b3grspwqj5bit" path="res://components/whip_attach.tscn" id="8_hg6s5"]
[ext_resource type="PackedScene" uid="uid://c12gwndp1uahl" path="res://tools/platform_test.tscn" id="10_2ieo8"]
[ext_resource type="PackedScene" uid="uid://bp08s4xd8fikm" path="res://components/keyswap_notification.tscn" id="16_32hag"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("2_kb6p2")
region = Rect2(0, 0, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqiix"]
atlas = ExtResource("2_yllr7")
region = Rect2(1536, 0, 384, 518)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7oew"]
atlas = ExtResource("2_yllr7")
region = Rect2(1152, 0, 384, 518)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35mf"]
atlas = ExtResource("2_yllr7")
region = Rect2(768, 0, 384, 518)

[sub_resource type="AtlasTexture" id="AtlasTexture_65viv"]
atlas = ExtResource("2_yllr7")
region = Rect2(384, 0, 384, 518)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7c3f"]
atlas = ExtResource("2_yllr7")
region = Rect2(0, 0, 384, 518)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjvpn"]
atlas = ExtResource("2_yllr7")
region = Rect2(1536, 518, 384, 518)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7qer"]
atlas = ExtResource("2_yllr7")
region = Rect2(1152, 518, 384, 518)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4c7l"]
atlas = ExtResource("2_yllr7")
region = Rect2(768, 518, 384, 518)

[sub_resource type="AtlasTexture" id="AtlasTexture_knn7v"]
atlas = ExtResource("2_yllr7")
region = Rect2(384, 518, 384, 518)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw77l"]
atlas = ExtResource("2_kb6p2")
region = Rect2(384, 0, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("4_wodsf")
region = Rect2(1536, 0, 384, 509)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pqkx"]
atlas = ExtResource("4_wodsf")
region = Rect2(1152, 0, 384, 509)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnw6m"]
atlas = ExtResource("4_wodsf")
region = Rect2(768, 0, 384, 509)

[sub_resource type="AtlasTexture" id="AtlasTexture_1so5t"]
atlas = ExtResource("4_wodsf")
region = Rect2(384, 0, 384, 509)

[sub_resource type="AtlasTexture" id="AtlasTexture_55jnj"]
atlas = ExtResource("4_wodsf")
region = Rect2(0, 0, 384, 509)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx5ib"]
atlas = ExtResource("4_wodsf")
region = Rect2(1536, 509, 384, 509)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2xo5"]
atlas = ExtResource("4_wodsf")
region = Rect2(1152, 509, 384, 509)

[sub_resource type="AtlasTexture" id="AtlasTexture_rptt4"]
atlas = ExtResource("2_8t03j")
region = Rect2(1536, 0, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7pn3"]
atlas = ExtResource("2_8t03j")
region = Rect2(1152, 0, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8hi5"]
atlas = ExtResource("2_8t03j")
region = Rect2(768, 0, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uvqg"]
atlas = ExtResource("2_8t03j")
region = Rect2(384, 0, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s1yo"]
atlas = ExtResource("2_8t03j")
region = Rect2(0, 0, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ejfk"]
atlas = ExtResource("2_8t03j")
region = Rect2(1536, 540, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd2rm"]
atlas = ExtResource("2_8t03j")
region = Rect2(1152, 540, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_q28gw"]
atlas = ExtResource("2_8t03j")
region = Rect2(768, 540, 384, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge24q"]
atlas = ExtResource("2_8t03j")
region = Rect2(384, 540, 384, 540)

[sub_resource type="SpriteFrames" id="SpriteFrames_2uw36"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}],
"loop": false,
"name": &"FALLING",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqiix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7oew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65viv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7c3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjvpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7qer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4c7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knn7v")
}],
"loop": true,
"name": &"IDLE",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw77l")
}],
"loop": false,
"name": &"JUMPING",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pqkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnw6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1so5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55jnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx5ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2xo5")
}],
"loop": true,
"name": &"SWINGING",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rptt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7pn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8hi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uvqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s1yo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ejfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd2rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q28gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge24q")
}],
"loop": true,
"name": &"WALKING",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rkbax"]
radius = 28.0
height = 108.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_oul6g")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.223958, 0.223958)
sprite_frames = SubResource("SpriteFrames_2uw36")
animation = &"FALLING"
script = ExtResource("3_2ieo8")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -54.0
offset_right = 28.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CapsuleShape2D_rkbax")

[node name="StateMachine" parent="." instance=ExtResource("3_g1dw6")]

[node name="Movement" parent="." instance=ExtResource("3_yw30f")]

[node name="Gravity" parent="." instance=ExtResource("2_rkbax")]

[node name="Cursor" parent="." instance=ExtResource("7_rgyib")]

[node name="Whip" parent="." instance=ExtResource("5_g6k8r")]

[node name="WhipAttach" parent="." instance=ExtResource("8_hg6s5")]

[node name="FrontRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -30)
target_position = Vector2(50, 0)
script = ExtResource("8_8t03j")

[node name="TopRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -75)
target_position = Vector2(0, 75)

[node name="CoyoteTime" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="ClimbingTimeout" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
script = ExtResource("5_qjkh3")

[node name="JumpTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
unique_name_in_owner = true

[node name="PlatformTest" parent="." instance=ExtResource("10_2ieo8")]

[node name="KeyswapNotification" parent="." instance=ExtResource("16_32hag")]
position = Vector2(0, -84)
scale = Vector2(5.14286, 5.14286)

[connection signal="set_grapple_point" from="Whip" to="WhipAttach" method="_on_whip_set_grapple_point"]
